chore(playwright): add playwright

--- a/apps/basics-lesson-3/index.html
+++ b/apps/basics-lesson-3/index.html
@@ -7,8 +7,10 @@
     <title>Basics - lesson 3 | Threejs Journey</title>
   </head>
   <body>
-    <h1 class="sr-only">Basics - lesson 3</h1>
-    <canvas class="webgl"></canvas>
+    <main>
+      <h1 class="sr-only">Basics - lesson 3</h1>
+      <canvas class="webgl"></canvas>
+    </main>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
